# openim-sdk-core

./: .gitignore
rust/: Cargo.toml
rust/migrations/: 20250101000000_init_conv_friend.sql
rust/src/: lib.rs
rust/src/im/: advanced_msg_listener.rs  auth.rs  client.rs  conversation.rs  conversation_dao.rs  db.rs  entities.rs  friend.rs  message_store.rs  mod.rs  msg.rs  serialization.rs  types.rs
rust/src/im/conversation/: api.rs  dao.rs  entities.rs  listener.rs  mod.rs  models.rs  service.rs  types.rs
rust/src/im/friend/: api.rs  dao.rs  entities.rs  listener.rs  mod.rs  models.rs  service.rs  types.rs
rust/src/im/message/: dao.rs  listener.rs  mod.rs  models.rs  types.rs
