[package]
name = "openim-sdk-core-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "openim_sdk_core_rust"
crate-type = ["lib"]

[dependencies]
openim-protocol = { path = "../../protocol" }
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1.10", features = ["v4"] }
anyhow = "1.0"
log = "0.4"
async-trait = "0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
# 统一使用 sqlx 作为 SQLite 访问和迁移工具
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json", "migrate"] }

[lints.rust]
unexpected_cfgs = { level = "warn" }

